Add footer and about me text

--- a/index.html
+++ b/index.html
@@ -66,17 +66,29 @@
       <div class="dp-container col-sm-4">
         <img class="profile-pic" src="photos/profile.jpg"></img>
       </div>
-      <div class="about-me-container col-sm-8">
+      <div class="about-me-container col-sm-7">
         <div class="about-me-title">
           Hello,
         </div>
         <div class="about-me-text text-justify">
           <p>My name is Hershey Rendon!</p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac sollicitudin lorem, ac viverra ligula. Curabitur id erat
-          quis velit pulvinar aliquam sed tristique elit. Fusce vitae quam consectetur, viverra tortor in, maximus tellus.
-          In hac habitasse platea dictumst. Proin dui sem, pretium vel pretium eu, fringilla eget est. Cras scelerisque porta
-          vulputate.
+           I have to say I'm not fond of writing things like these but I love hearing other people's stories. 
+           I think that's one of the things that really drew me to photography. 
+           I get to see your story through my lens and then retell it in a beautiful photo. 
+          </p>
+          <p>
+          Since the birth of my son I've truly realized how fleeting time is. 
+          He will never be this little again. 
+          Which brings me to the other reason I love photography: I get to freeze time. 
+          For those few photos, time is frozen and we get to keep a little more of those moments. 
+          </p>
+          <p>
+          My purpose for my work is to help you capture the right now, to help you suspend time
+          and to give you beautiful memories.
+          </p>
+          <p>
+          Thank you so much for visiting and I look forward to meeting you!
           </p>
         </div>
       </div>
@@ -86,9 +98,9 @@
 
 
   <div class="contact-div w-100" id="contact">
-    <div class="contact-text col-sm-6 d-inline-block">
+    <div class="contact-text d-inline-block">
       <div class="contact-title"> CONTACT ME </div>
-      <div class="contact-details">
+      <div class="contact-details col-sm-12">
         <span class="font-weight-bold"> Email </span>
         <span> hersheyrendon@gmail.com </span>
         <br>
@@ -111,6 +123,13 @@
     </div>
   </div>
 
+  <div id="footer">
+    <div class="container">
+      <p class="copyright-text footer-block">
+      © HERSHEY RENDON
+      </p>
+    </div>
+  </div>
 
 
 
