Add actual photos to portfolio

--- a/index.html
+++ b/index.html
@@ -32,21 +32,39 @@
 
   <div class="portfolio-div w-100" id="portfolio">
     <div id="gallery">
-      <!-- First Row -->
-      <div class="row">
+            <div class="row">
         <div class="img-container col-md-6">
-            <img class="photo" src="photos/fam1.jpg">
-            </img>
+          <img class="photo" src="photos/portfolio/IMG_0363.jpg">
+          </img>
         </div>
         <div class="img-container col-md-6">
-          <img class="photo" src="photos/fam3.jpg">
+          <img class="photo" src="photos/portfolio/IMG_0250.jpg">
           </img>
         </div>
       </div>
-      <!-- Second Row -->
-      <div class="img-container col-md-12">
-        <img class="photo" src="photos/fam2.jpg">
-        </img>
+      <div class="row">
+        <div class="img-container col-md-4">
+            <img class="photo" src="photos/portfolio/IMG_5588.jpg">
+            </img>
+        </div>
+        <div class="img-container col-md-4">
+          <img class="photo" src="photos/portfolio/IMG_8410.jpg">
+          </img>
+        </div>
+        <div class="img-container col-md-4">
+          <img class="photo" src="photos/portfolio/IMG_9320.jpg">
+          </img>
+        </div>
+      </div>
+      <div class="row">
+        <div class="img-container col-md-6">
+          <img class="photo" src="photos/portfolio/IMG_0257.jpg">
+          </img>
+        </div>
+        <div class="img-container col-md-6">
+          <img class="photo" src="photos/portfolio/IMG_9716-2.jpg">
+          </img>
+        </div>
       </div>
     </div>
   </div>
