Fix vignette effect and adjust code indentation

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <div class="portfolio-div w-100" id="portfolio">
     <div id="gallery">
-            <div class="row">
+      <div class="row">
         <div class="img-container col-md-6">
           <img class="photo" src="photos/portfolio/IMG_0363.jpg">
           </img>
@@ -44,8 +44,8 @@
       </div>
       <div class="row">
         <div class="img-container col-md-4">
-            <img class="photo" src="photos/portfolio/IMG_5588.jpg">
-            </img>
+          <img class="photo" src="photos/portfolio/IMG_5588.jpg">
+          </img>
         </div>
         <div class="img-container col-md-4">
           <img class="photo" src="photos/portfolio/IMG_8410.jpg">
@@ -91,22 +91,20 @@
         <div class="about-me-text text-justify">
           <p>My name is Hershey Rendon!</p>
           <p>
-           I have to say I'm not fond of writing things like these but I love hearing other people's stories. 
-           I think that's one of the things that really drew me to photography. 
-           I get to see your story through my lens and then retell it in a beautiful photo. 
+            I have to say I'm not fond of writing things like these but I love hearing other people's stories. I think that's one of
+            the things that really drew me to photography. I get to see your story through my lens and then retell it in
+            a beautiful photo.
           </p>
           <p>
-          Since the birth of my son I've truly realized how fleeting time is. 
-          He will never be this little again. 
-          Which brings me to the other reason I love photography: I get to freeze time. 
-          For those few photos, time is frozen and we get to keep a little more of those moments. 
+            Since the birth of my son I've truly realized how fleeting time is. He will never be this little again. Which brings me to
+            the other reason I love photography: I get to freeze time. For those few photos, time is frozen and we get to
+            keep a little more of those moments.
           </p>
           <p>
-          My purpose for my work is to help you capture the right now, to help you suspend time
-          and to give you beautiful memories.
+            My purpose for my work is to help you capture the right now, to help you suspend time and to give you beautiful memories.
           </p>
           <p>
-          Thank you so much for visiting and I look forward to meeting you!
+            Thank you so much for visiting and I look forward to meeting you!
           </p>
         </div>
       </div>
@@ -124,18 +122,18 @@
         <br>
         <span class="font-weight-bold"> Phone </span>
         <span> 604-604-6044 </span>
-        </div>
-          <div class="social-media-links">
-            <a href="https://www.facebook.com/hersheyrendonphotography/">
+      </div>
+      <div class="social-media-links">
+        <a href="https://www.facebook.com/hersheyrendonphotography/">
             <img class="social-media-pic fb-logo" src="photos/facebook-logo.png">
             </img>
           </a>
-            <a href="https://www.instagram.com/hersheyrendonphotography/">
+        <a href="https://www.instagram.com/hersheyrendonphotography/">
             <img class="social-media-pic insta-logo" src="photos/insta-logo.png">
             </img>
           </a>
-        </div>
       </div>
+    </div>
     <div class="contact-image d-inline-block">
 
     </div>
@@ -144,7 +142,7 @@
   <div id="footer">
     <div class="container">
       <p class="copyright-text footer-block">
-      © HERSHEY RENDON
+        © HERSHEY RENDON
       </p>
     </div>
   </div>
