Update contact details

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <p>My name is Hershey Rendon!</p>
           <p>
             I have to say I'm not fond of writing things like these but I love hearing other people's stories. I think that's one of
-            the things that really drew me to photography. I get to see your story through my lens and then retell it in
+            the things that really draw me to photography. I get to see your story through my lens and then retell it in
             a beautiful photo.
           </p>
           <p>
@@ -118,10 +118,8 @@
       <div class="contact-title"> CONTACT ME </div>
       <div class="contact-details col-sm-12">
         <span class="font-weight-bold"> Email </span>
-        <span> hersheyrendon@gmail.com </span>
+        <span> hersheyrendonphoto@gmail.com </span>
         <br>
-        <span class="font-weight-bold"> Phone </span>
-        <span> 604-604-6044 </span>
       </div>
       <div class="social-media-links">
         <a href="https://www.facebook.com/hersheyrendonphotography/">
