--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="col-md-2 offset-md-2 title">
       timeless.
     </div>
-    <div class="row">
+    <div class="row w-100">
       <div class="img-container col-md-3 offset-md-1">
         <img class="photo" src="photos/portfolio/IMG_9320.jpg">
         </img>
@@ -101,7 +101,7 @@
     <div class="col-md-9 offset-md-2 title">
       about Hershey.
     </div>
-    <div class="row vertical-align">
+    <div class="row w-100 vertical-align">
       <div class="about-me-container col-md-9 offset-md-1">
         <div class="about-me-text text-justify">
           <p>
@@ -131,7 +131,7 @@
     <div class="col-md-9 offset-md-2 title">
       contact Hershey.
     </div>
-    <row>
+    <div class="w-100">
       <div class="contact-details col-sm-9 offset-md-1">
         <span class="font-weight-bold"> Email </span>
         <span> hersheyrendonphoto@gmail.com </span>
@@ -146,7 +146,7 @@
           </a>
         </span>
       </div>
-    </row>
+    </div>
   </div>
 
   <div id="footer" class="w-100">
